Bug 155947 - Korean word default font size is 10pt.
Summary: Korean word default font size is 10pt.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: DaeHyun Sung
URL:
Whiteboard: target:24.2.0
Keywords: difficultyBeginner, easyHack, skillDesign, topicDesign
Depends on:
Blocks: CJK CJK-Korean
  Show dependency treegraph
 
Reported: 2023-06-20 10:46 UTC by DaeHyun Sung
Modified: 2023-08-02 06:50 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Korean wordprocessor HWP 2014 Mac Versions default font size is 10pt (1.62 MB, image/png)
2023-06-20 10:47 UTC, DaeHyun Sung
Details
Korean wordprocessor HWP 2018 Windows Versions default font size is 10pt (43.24 KB, image/png)
2023-06-20 10:48 UTC, DaeHyun Sung
Details
Korean wordprocessor HWP 2022 Windows Versions default font size is 10pt (30.81 KB, image/png)
2023-06-20 10:48 UTC, DaeHyun Sung
Details
Korean wordprocessor MS word 2019 Windows Versions default font size is 10pt (62.79 KB, image/png)
2023-06-20 10:48 UTC, DaeHyun Sung
Details
Wrong - LibreOffice's Korean language mode's default font size is 10.5pt. (58.12 KB, image/png)
2023-06-20 10:50 UTC, DaeHyun Sung
Details
(Korean law document - pdf) the enforcement rules of "Regulations on Administrative Efficiency and Collaboration Promotion" (208.08 KB, application/pdf)
2023-06-22 03:04 UTC, DaeHyun Sung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description DaeHyun Sung 2023-06-20 10:46:20 UTC
Description:
Korean word default font size is 10pt.

I am Korean.
I have experienced since I first started using LibreOffice that when I create a document on LibreOffice Writer, it is always default set to 10.5pt.

I didn't understand why it was set to 10.5pt on LibreOffice Writer.

I checked LibreOffice's commit log and found that the CJK font size was integrated into 10.5pt.

sw-default-cjk-fontsize.diff: default CJK font fontsize as 10.5pt
https://git.libreoffice.org/core/+/7343e687fc9a180d453bf0112318c563801f303d
https://bz.apache.org/ooo/show_bug.cgi?id=72010

The person who submitted this commit is not Korean, 
so I think he submitted it without knowing the basic font size used in Korea.

I checked HWP2014, HWP 2018, HWP 2022, and MS Office 2019, which I use in Korea, 
The default font for Korean is set to 10pt.

Even though Korean is a CJKV(Chinese-Japanese-Korean-Vietnamese) culture, 
There are quite a few different formats, similar to Chinese and Japanese.

So, I think the default font size for Korean on LibreOffice should be set to 10pt.

Steps to Reproduce:
1. Run LibreOffice Writer (set Korean Language mode)
2. check default font size - 10.5pt
3. 

Actual Results:
1. Run LibreOffice Writer (set Korean Language mode)
2. check default font size - 10.5pt

Expected Results:
1. Run LibreOffice Writer (set Korean Language mode)
2. check default font size - 10pt


Reproducible: Always


User Profile Reset: No

Additional Info:
HWP document shows that default word processor font size is 10pt.
Link1: https://help.hancom.com/hoffice/webhelp/9.0/ko_kr/hwp/format/setting_paper/setting_paper(word_grid).htm

Link2: https://www.hancom.com/cs_center/csFaqDetail.do?pageInfo.page=1&faq_ctgr_cd=&faq_ctgr_lv=&faq_seq=287&faqCtgr1=&faqCtgr2=&faqCtgr3=
Comment 1 DaeHyun Sung 2023-06-20 10:47:45 UTC
Created attachment 188014 [details]
Korean wordprocessor HWP 2014 Mac Versions default font size is 10pt

Korean wordprocessor HWP 2014 Mac Versions default font size is 10pt
Comment 2 DaeHyun Sung 2023-06-20 10:48:12 UTC
Created attachment 188015 [details]
Korean wordprocessor HWP 2018 Windows Versions default font size is 10pt

Korean wordprocessor HWP 2018 Windows Versions default font size is 10pt
Comment 3 DaeHyun Sung 2023-06-20 10:48:32 UTC
Created attachment 188016 [details]
Korean wordprocessor HWP 2022 Windows Versions default font size is 10pt

Korean wordprocessor HWP 2022 Windows Versions default font size is 10pt
Comment 4 DaeHyun Sung 2023-06-20 10:48:56 UTC
Created attachment 188017 [details]
Korean wordprocessor MS word 2019 Windows Versions default font size is 10pt

Korean wordprocessor MS word 2019 Windows Versions default font size is 10pt
Comment 5 DaeHyun Sung 2023-06-20 10:50:15 UTC
Created attachment 188018 [details]
Wrong - LibreOffice's Korean language mode's default font size is 10.5pt.

Wrong - LibreOffice's Korean language mode's default font size is 10.5pt.
In Korea, Korean word processors(HWP and MS Word) default font size is 10pt.
Comment 6 V Stuart Foote 2023-06-20 17:28:38 UTC
At the time commit 

"https://git.libreoffice.org/core/+/7343e687fc9a180d453bf0112318c563801f303d%5E%21/"

was added to OOo core in 2010 the default for CJK had been the same 12pt as both Western, CTL, and CJK. 

In 2007 the OOo had rejected that change.

However it has been at 10.5 for CJK since, which suggests it is not that great an issue, and not clear that adjusting the default size to 10 pt (e.g. 200) for all CJK users would be acceptable to the majority.  That is to say that 10.5 has served LO CJK users well for 13 years, what justifies the change?

Also, I haven't traced through, but this value seems for UI. Expect the actual default font size in CJK document would come from the sw template?
Comment 7 Shu Zhang 2023-06-21 10:08:45 UTC
I understand that nowadays from the pictures you provided all the principal office tools are setting CJK font size to 10pt, but we have been using the 10.5pt for 13 years maybe it is not a good idea to change them to 10pt default because all the users may be already familiar with 10.5pt, what do you think. (just like if we use Mac the cross is on the left top corner) :)
Comment 8 Eyal Rozenberg 2023-06-21 20:30:28 UTC
My "two cents" on this issue: Don't compare against MS Office, but rather consider common usage.

When people write formal letters in Korea, which body font size do they use? When students submit papers and homework assignment, which font size are they expected to use?

Now, I realize the answer might be "10, because that's what MS Office does by default", but then look back to periods before MS Office was popular. What are the typographical conventions? I would say that would be a better guiding principle.
Comment 9 DaeHyun Sung 2023-06-22 02:53:18 UTC
(In reply to V Stuart Foote from comment #6)
> At the time commit 
> 
> "https://git.libreoffice.org/core/+/
> 7343e687fc9a180d453bf0112318c563801f303d%5E%21/"
> 
> was added to OOo core in 2010 the default for CJK had been the same 12pt as
> both Western, CTL, and CJK. 
> 
> In 2007 the OOo had rejected that change.
> 
> However it has been at 10.5 for CJK since, which suggests it is not that
> great an issue, and not clear that adjusting the default size to 10 pt (e.g.
> 200) for all CJK users would be acceptable to the majority.  That is to say
> that 10.5 has served LO CJK users well for 13 years, what justifies the
> change?


In Korean law(the enforcement rules of "Regulations on Administrative Efficiency and Collaboration Promotion" [Korean name: "행정 효율과 협업 촉진에 관한 규정 시행규칙") since 2011, 
The default document font size for Korea government office is 10pt
Korean: "글자 크기는 10pt를 기본으로 하고 "(  )" 안의 글씨는 9pt로 하되, 예외로 정하는 항목은 다음과 같다."
English: The font size is 10pt, with the exception of "( )" should be 9pt, with the following exception.

Link: https://law.go.kr/%EB%B2%95%EB%A0%B9%EB%B3%84%ED%91%9C%EC%84%9C%EC%8B%9D/(%ED%96%89%EC%A0%95%20%ED%9A%A8%EC%9C%A8%EA%B3%BC%20%ED%98%91%EC%97%85%20%EC%B4%89%EC%A7%84%EC%97%90%20%EA%B4%80%ED%95%9C%20%EA%B7%9C%EC%A0%95%20%EC%8B%9C%ED%96%89%EA%B7%9C%EC%B9%99,20210907,%EB%B3%84%ED%91%9C4)

Also, many of South Korea's Universities homework template requires that default font size is 10pt.


> 
> Also, I haven't traced through, but this value seems for UI. Expect the
> actual default font size in CJK document would come from the sw template?

It's from South Korea law.
Comment 10 DaeHyun Sung 2023-06-22 02:55:29 UTC
(In reply to Shu Zhang from comment #7)
> I understand that nowadays from the pictures you provided all the principal
> office tools are setting CJK font size to 10pt, but we have been using the
> 10.5pt for 13 years maybe it is not a good idea to change them to 10pt
> default because all the users may be already familiar with 10.5pt, what do
> you think. (just like if we use Mac the cross is on the left top corner) :)

In Korea, MS Word and HWP are mainly used rather than LibreOffice.
As a result, there seems to be a lack of discussion on LibreOffice's default font size for Korean.

In Korean law(the enforcement rules of "Regulations on Administrative Efficiency and Collaboration Promotion" [Korean name: "행정 효율과 협업 촉진에 관한 규정 시행규칙") since 2011, 
The default document font size for Korea government office is 10pt
Korean: "글자 크기는 10pt를 기본으로 하고 "(  )" 안의 글씨는 9pt로 하되, 예외로 정하는 항목은 다음과 같다."
English: The font size is 10pt, with the exception of "( )" should be 9pt, with the following exception.

Link: https://law.go.kr/%EB%B2%95%EB%A0%B9%EB%B3%84%ED%91%9C%EC%84%9C%EC%8B%9D/(%ED%96%89%EC%A0%95%20%ED%9A%A8%EC%9C%A8%EA%B3%BC%20%ED%98%91%EC%97%85%20%EC%B4%89%EC%A7%84%EC%97%90%20%EA%B4%80%ED%95%9C%20%EA%B7%9C%EC%A0%95%20%EC%8B%9C%ED%96%89%EA%B7%9C%EC%B9%99,20210907,%EB%B3%84%ED%91%9C4)

Also, many of South Korea's Universities homework template requires that default font size is 10pt.
Comment 11 DaeHyun Sung 2023-06-22 03:03:20 UTC
(In reply to Eyal Rozenberg from comment #8)
> My "two cents" on this issue: Don't compare against MS Office, but rather
> consider common usage.
> 
> When people write formal letters in Korea, which body font size do they use?
> When students submit papers and homework assignment, which font size are
> they expected to use?
> 


In Korea, most of the default font size is 10pt in many fields. Also, South Korea's Universities homework assignment require font sizes between 10pt and 12pt.
 


> Now, I realize the answer might be "10, because that's what MS Office does
> by default", but then look back to periods before MS Office was popular.
> What are the typographical conventions? I would say that would be a better
> guiding principle.

Also, In Korean law(the enforcement rules of "Regulations on Administrative Efficiency and Collaboration Promotion" [Korean name: "행정 효율과 협업 촉진에 관한 규정 시행규칙") since 2011, 
The default document font size for Korea government office is 10pt
Korean: "글자 크기는 10pt를 기본으로 하고 "(  )" 안의 글씨는 9pt로 하되, 예외로 정하는 항목은 다음과 같다."
English: The font size is 10pt, with the exception of "( )" should be 9pt, with the following exception.

Link: https://law.go.kr/%EB%B2%95%EB%A0%B9%EB%B3%84%ED%91%9C%EC%84%9C%EC%8B%9D/(%ED%96%89%EC%A0%95%20%ED%9A%A8%EC%9C%A8%EA%B3%BC%20%ED%98%91%EC%97%85%20%EC%B4%89%EC%A7%84%EC%97%90%20%EA%B4%80%ED%95%9C%20%EA%B7%9C%EC%A0%95%20%EC%8B%9C%ED%96%89%EA%B7%9C%EC%B9%99,20210907,%EB%B3%84%ED%91%9C4)

As a result, In order to promote the use of LibreOffice in Korean government offices and the public sector, It seems that the font size should be set to 10pt as the default.
Comment 12 DaeHyun Sung 2023-06-22 03:04:38 UTC
Created attachment 188048 [details]
(Korean law document - pdf) the enforcement rules of "Regulations on Administrative Efficiency and Collaboration Promotion"

In Korean law(the enforcement rules of "Regulations on Administrative Efficiency and Collaboration Promotion" [Korean name: "행정 효율과 협업 촉진에 관한 규정 시행규칙") since 2011, 
The default document font size for Korea government office is 10pt
Korean: "글자 크기는 10pt를 기본으로 하고 "(  )" 안의 글씨는 9pt로 하되, 예외로 정하는 항목은 다음과 같다."
English: The font size is 10pt, with the exception of "( )" should be 9pt, with the following exception.

Link: https://law.go.kr/%EB%B2%95%EB%A0%B9%EB%B3%84%ED%91%9C%EC%84%9C%EC%8B%9D/(%ED%96%89%EC%A0%95%20%ED%9A%A8%EC%9C%A8%EA%B3%BC%20%ED%98%91%EC%97%85%20%EC%B4%89%EC%A7%84%EC%97%90%20%EA%B4%80%ED%95%9C%20%EA%B7%9C%EC%A0%95%20%EC%8B%9C%ED%96%89%EA%B7%9C%EC%B9%99,20210907,%EB%B3%84%ED%91%9C4)
Comment 13 Cheng-Chia Tseng 2023-06-22 07:28:45 UTC
It seems to be the official regulation from Korean government, so it should be changed to 10pt for Korean users to respect the local usage and the culture.

I think it is practical to make 10pt default for Korean UI only, and leave others (Chinese and Japanese) using 10.5pt as before.
Comment 14 Heiko Tietze 2023-06-22 08:45:15 UTC
If the local community requests this change, also backed by people on the CJK Telegram channel, we should not argue.

Easyhackable, code pointer in c0 and c6.
Comment 15 DaeHyun Sung 2023-06-22 10:48:55 UTC
(In reply to Heiko Tietze from comment #14)
> If the local community requests this change, also backed by people on the
> CJK Telegram channel, we should not argue.
> 
> Easyhackable, code pointer in c0 and c6.

I submitted my modified source code.
https://gerrit.libreoffice.org/c/core/+/153324
Comment 16 V Stuart Foote 2023-06-22 16:13:14 UTC
I think we are going to need more nuanced approach than the one-off hardcoding 대현 suggests--kind of the gist of see also bug 115970

Setting a specific CJK (as well as CTL and Western) font-size selection by language will lead to odd ODF. Korean Hangul text runs will be at 10pt, but so would any Hanja or mixed script paragraphs holding unified CJK ideographs.

Also, the templates are loaded with instances of hard coded "font-size-asian" strings still at 12pt even though the 10.5pt for CJK made it into LO at 3.3 [1]

I think there is more to be done to support the ROK stylistic norms, and the broader CJK locale user community.

@Khaled, as I recall you've mentioned inclination to abandon our inherited CJK, CTL, Western segregation for something else --e.g. https://bugs.documentfoundation.org/show_bug.cgi?id=104318#c19 something you'll be able to coordinate?


=-ref-=
[1] https://opengrok.libreoffice.org/search?project=core&full=%22font-size-asian%22+ko&defs=&refs=&path=&hist=&type=&xrd=&nn=1&si=full&si=full
Comment 17 Shinji Enoki 2023-06-22 21:08:58 UTC
(In reply to Cheng-Chia Tseng from comment #13)
> It seems to be the official regulation from Korean government, so it should
> be changed to 10pt for Korean users to respect the local usage and the
> culture.
> 
> I think it is practical to make 10pt default for Korean UI only, and leave
> others (Chinese and Japanese) using 10.5pt as before.

I agree with that.

As for Korean, I think it's better to match the local culture with 10pt.

In Japanese, 10.5pt is often used by default for Japanese typewriters, Japanese word processor hardware, and even word processor software, probably due to the influence of old printing standards.

https://www.jagat.or.jp/past_archives/story/2381.html
https://www.nik-prt.co.jp/surusuru/proud/complicated-the-size-of-letter-gou-1/

According to Cheng-Chia Tseng's LibreOffice conference 2017 slides, it seems to be the same in Chinese
Comment 18 Volga 2023-06-23 06:07:04 UTC Comment hidden (off-topic)
Comment 19 Volga 2023-06-23 06:11:17 UTC
So there's necessary to implement separate font size settings for ko-KR locale, which should be works without any manual change, just since creating new document by their users.
Comment 20 Heiko Tietze 2023-06-23 06:38:16 UTC
(In reply to Volga from comment #19)
> So there's necessary to implement separate font size settings for ko-KR
> locale, which should be works without any manual change, just since creating
> new document by their users.
That's exactly how the (not yet submitted) patch is implemented (see c15).

Bug 115970 requests to "Set default font size for CJK/Western text fonts as locale value", which makes everything way more easy to customize for local needs but is the opposite to Stuart's concerns in c16.
Comment 21 Volga 2023-07-02 20:28:30 UTC
(In reply to Heiko Tietze from comment #20)
> Bug 115970 requests to "Set default font size for CJK/Western text fonts as
> locale value", which makes everything way more easy to customize for local
> needs but is the opposite to Stuart's concerns in c16.
Yeah I see, but I don't think Stuart's concerns could be stand, instead I think LibreOffice need to assign CJK/Western/complex text size the same, and depends on locale language.
Comment 22 Commit Notification 2023-07-03 07:21:23 UTC
DaeHyun Sung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4ffa5f2d741368bcc70ec3fd5d5ca1249cfc1e37

tdf#155947 Korean word default font size is 10pt

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Franklin Weng 2023-08-02 06:50:09 UTC
(In reply to V Stuart Foote from comment #6)
> However it has been at 10.5 for CJK since, which suggests it is not that
> great an issue, and not clear that adjusting the default size to 10 pt (e.g.
> 200) for all CJK users would be acceptable to the majority.  That is to say
> that 10.5 has served LO CJK users well for 13 years, what justifies the
> change?

Honestly speaking, from what I know, users here in Taiwan don't really like 10.5 by default.  They just didn't speak out or just did the work (set to 12) themselves.  But certainly, in the Taiwanese government rules of official documents, the Chinese font size in the main text body needs to be 12, not 10.5.