tdf#155947 Korean word default font size is 10pt

Korean word processors(HWP & MS Word) default font size is 10pt.
So, I set to 10pt on LibreOffice Writer.

Change-Id: Ic31332e37b3b450589ded6df243aae6961fdf394
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153324
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>